[package]
name = "proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-service = "0.13.0"
shuttle-actix-web = "0.13.0"
shuttle-runtime = "0.13.0"
actix-web = "4.3.1"
csv = "1.1.6"
tokio = "1.26.0"
